[metadata]
name = liftree
version = 0.0.1
author = Olivier Perriot
author-email = olivier.perriot@free.fr
home-page = https://github.com/vengaar/liftree
description = SWGI application to browse text files and display them via jinja2 templates
long_description = file: README.md
license = GPLv3

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
test_suite = tests
setup_requires =
  setuptools
packages = liftree

#[options.data_files]
#/etc/liftree =
#  setup/playbooks/setup.yml